# coding-assignments

./: .gitignore
data-ingestion-pipeline-go/: PRD.md  README.md  go.mod
data-ingestion-pipeline-go/internal/config/: config.go
data-ingestion-pipeline-go/internal/models/: errors.go  post.go
data-ingestion-pipeline-go/internal/repository/: post_repository.go
data-ingestion-pipeline-go/pkg/database/: database.go
data-ingestion-pipeline-go/pkg/httpclient/: client.go
data-ingestion-pipeline-go/pkg/logger/: logger.go
inventory-management-system/: Assignment_3.md  README.md
inventory-management-system/app/: exceptions.py  inventory_manager.py  main.py  models.py
order-processing-system-queue/: Assigment_2.md  README.md  pyproject.toml
order-processing-system-queue/app/: __init__.py  main.py
order-processing-system-queue/app/api/routes/: metrics.py  orders.py
order-processing-system-queue/app/db/: __init__.py  database.py  models.py
order-processing-system-queue/app/schemas/: metrics.py
order-processing-system-queue/app/services/: metrics_service.py  order_service.py  queue_service.py
order-processing-system-rabbitmq/: README.md  pyproject.toml
order-processing-system-rabbitmq/app/: main.py
order-processing-system-rabbitmq/app/api/endpoints/: metrics.py  orders.py
order-processing-system-rabbitmq/app/db/: database.py  init_db.py
order-processing-system-rabbitmq/app/models/: order.py
order-processing-system-rabbitmq/app/queue/: consumer.py  producer.py
order-processing-system-rabbitmq/app/services/: metrics_service.py  order_service.py
