[tool.poetry]
name = "order-processing-system"
version = "0.1.0"
description = "Backend system for order processing"
authors = ["Anurag Singh <email@anuragsingh.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
pika = "^1.3.2"
pydantic = "^2.5.3"
aio-pika = "^9.3.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
uvloop = "^0.21.0"
httptools = "^0.6.4"

[tool.poetry.dev-dependencies]
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 